Added website link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<li><a href="http://incubator.apache.org/mesos/">Apache Mesos</a></li>
 		</ul><h3>Authors and Contributors</h3>
 
-		<p>Shark is developed in the <a href="http://amplab.cs.berkeley.edu/">UC Berkeley AMP Lab</a> by Cliff Engle, Antonio Lupher, and <a href="http://www.cs.berkeley.edu/%7Erxin">Reynold Xin</a>. The research and development is supported in part by an NSF CISE Expeditions award,  gifts from Google, SAP, Amazon Web Services, Blue Goji, Cisco, Cloudera, Ericsson, General Electric, Hewlett Packard, Huawei, Intel, MarkLogic, Microsoft, NetApp, Oracle, Quanta, Splunk, VMware and by DARPA (contract #FA8650-11-C-7136).</p>
+		<p>Shark is developed in the <a href="http://amplab.cs.berkeley.edu/">UC Berkeley AMP Lab</a> by Cliff Engle, <a href="http://www.cs.berkeley.edu/~alupher">Antonio Lupher</a>, and <a href="http://www.cs.berkeley.edu/%7Erxin">Reynold Xin</a>. The research and development is supported in part by an NSF CISE Expeditions award,  gifts from Google, SAP, Amazon Web Services, Blue Goji, Cisco, Cloudera, Ericsson, General Electric, Hewlett Packard, Huawei, Intel, MarkLogic, Microsoft, NetApp, Oracle, Quanta, Splunk, VMware and by DARPA (contract #FA8650-11-C-7136).</p>
 
 		<h3>Support or Contact</h3>
 
