--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <p>We released
       <a href="https://github.com/amplab/shark/wiki/Shark-Release-0.2">Shark 0.2</a> on Oct 15, 2012.
-      The new version is uch more stable and also features significant performance improvements.
+      The new version is much more stable and also features significant performance improvements.
     </p>
 
     <h3>Getting Started</h3>
