Added mailing list.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <p class="view">
           <a href="https://github.com/amplab/shark">Source Code on GitHub</a>
         </p>
+
+        <p class="view">
+          <a href="http://groups.google.com/group/shark-users">Mailing List</a>
+        </p>
 		<!--
 		        <ul>
 		          <li><a href="https://github.com/amplab/shark/zipball/master">Download <strong>ZIP File</strong></a></li>
