Added the Shark tech report.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<p>Shark is a large-scale data warehouse system for Spark designed to be compatible with
       <a href="http://hive.apache.org/">Apache Hive</a>. It can answer Hive QL queries up to
-      70 times faster than Hive without modification to the existing data nor queries. Shark
+      100 times faster than Hive without modification to the existing data nor queries. Shark
       supports Hive's query language, metastore, serialization formats, and user-defined functions.
 
     </p>
@@ -96,8 +96,9 @@
 		<h3>References</h3>
 
 		<ul>
-		<li><a href="presentations/2012-04-23_Shark_alpha_release.pdf">Shark Deep Dive presentation at Spark User Meetup</a> (April 2012)</li>
-		<li><a href="http://amplab.cs.berkeley.edu/publication/shark-fast-data-analysis-using-coarse-grained-distributed-memory-demonstration-paper/">Shark's SIGMOD 2012 demo submission</a> (submitted March 2012)</li>
+    <li><a href="presentations/2012-11-26-shark-tech-report.pdf">Shark: Shark: SQL and Rich Analytics at Scale</a> (Tech Report, Nov 2012)</li>
+		<li><a href="presentations/2012-04-23_Shark_alpha_release.pdf">Shark Deep Dive presentation at Spark User Meetup</a> (Apr 2012)</li>
+<!-- 		<li><a href="http://amplab.cs.berkeley.edu/publication/shark-fast-data-analysis-using-coarse-grained-distributed-memory-demonstration-paper/">Shark's SIGMOD 2012 demo submission</a> (submitted March 2012)</li> -->
 		<li><a href="https://cwiki.apache.org/confluence/display/Hive/GettingStarted">Getting Started with Apache Hive</a></li>
 		<li><a href="http://www.spark-project.org/">Spark Project</a></li>
 		<li><a href="http://incubator.apache.org/mesos/">Apache Mesos</a></li>
