--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<h3>References</h3>
 
 		<ul>
-    <li><a href="presentations/2012-11-26-shark-tech-report.pdf">Shark: Shark: SQL and Rich Analytics at Scale</a> (Tech Report, Nov 2012)</li>
+    <li><a href="presentations/2012-11-26-shark-tech-report.pdf">Shark: SQL and Rich Analytics at Scale</a> (Tech Report, Nov 2012)</li>
 		<li><a href="presentations/2012-04-23_Shark_alpha_release.pdf">Shark Deep Dive presentation at Spark User Meetup</a> (Apr 2012)</li>
 <!-- 		<li><a href="http://amplab.cs.berkeley.edu/publication/shark-fast-data-analysis-using-coarse-grained-distributed-memory-demonstration-paper/">Shark's SIGMOD 2012 demo submission</a> (submitted March 2012)</li> -->
 		<li><a href="https://cwiki.apache.org/confluence/display/Hive/GettingStarted">Getting Started with Apache Hive</a></li>
