Added news section.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="container">
       <ul class="nav navbar-nav">
         <li><a href="https://github.com/amplab/shark/releases">Download</a></li>
+        <li><a href="https://github.com/amplab/shark/">GitHub</a></li>
         <li><a href="https://github.com/amplab/shark/wiki">Documentation</a></li>
         <li><a href="https://groups.google.com/forum/#!forum/shark-users">Mailing List</a></li>
         <li class="dropdown">
@@ -56,6 +57,31 @@
 
   <div class="jumbotron">
     <b>Shark</b> makes Hive faster and more powerful.
+  </div>
+
+  <div class="row row-padded">
+    <div class="col-md-7 col-sm-7">
+      <h2>What is Shark?</h2>
+      <p class="lead">
+        Shark is an open source distributed SQL query engine for Hadoop data.
+        It brings state-of-the-art performance and advanced analytics to Hive users.
+      </p>
+<!--       <p>
+        Shark uses the powerful <a href="http://spark.incubator.apache.org">Apache Spark</a>
+        engine to speed up computations.
+      </p> -->
+    </div>
+    <div class="col-md-5 col-sm-5">
+      <h2>News</h2>
+      <p>
+        <ul>
+          <li><a href="https://amplab.cs.berkeley.edu/benchmark/">Big Data Benchmark updated</a> (Feb 11, 2014)</li>
+          <li><a href="https://github.com/amplab/shark/releases/tag/v0.8.1">Shark 0.8.1 released</a> (Jan 15, 2014)</li>
+          <li><a href="http://spark-summit.org/summit-2013/">Shark at Spark Summit</a> (Dec 2, 2013)</li>
+          <li><a href="https://github.com/amplab/shark/releases/tag/v0.8.0">Shark 0.8.0 released</a> (Oct 17, 2013)</li>
+        </ul>
+      </p>
+    </div>
   </div>
 
   <div class="row row-padded">
