Added 0.9.1 release news.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <h2>News</h2>
       <p>
         <ul>
+          <li><a href="https://github.com/amplab/shark/releases/tag/v0.9.1">Shark 0.9.1 released</a> (Apr 10, 2014)</li>
           <li><a href="https://amplab.cs.berkeley.edu/benchmark/">Big Data Benchmark updated</a> (Feb 11, 2014)</li>
           <li><a href="https://github.com/amplab/shark/releases/tag/v0.8.1">Shark 0.8.1 released</a> (Jan 15, 2014)</li>
           <li><a href="http://spark-summit.org/summit-2013/">Shark at Spark Summit</a> (Dec 2, 2013)</li>
